--- a/src/scss/_variables.scss
+++ b/src/scss/_variables.scss
@@ -15,14 +15,14 @@ $blue-1f4: #1f4060;
 $grey-400: #e8eaef;
 $neutral-500: #72808e;
 $base-color: #0068ff;
-$blue-zelo: #4c92ff;
+$blue-meetdy: #4c92ff;
 $silver: #b3bbc8;
 $blue-700: #e5efff;
 $grey-500: #eeeff2;
-$gradident-blue: linear-gradient(90deg, $base-color, $blue-zelo);
+$gradident-blue: linear-gradient(90deg, $base-color, $blue-meetdy);
 $dark-gray: #abb3bb;
 $light-cyan: #d2efff;
 $white-smoker: #f5f5f5;
 $purple: #814096;
 $pink: #f83292;
-$gradient: linear-gradient(90deg, $blue-zelo, $base-color);
+$gradient: linear-gradient(90deg, $blue-meetdy, $base-color);
