--- a/src/features/Chat/components/ModalClassify/style.scss
+++ b/src/features/Chat/components/ModalClassify/style.scss
@@ -4,7 +4,7 @@
         font-size: 1.6rem;
         display: inline-flex;
         align-items: center;
-        color: $blue-zelo;
+        color: $blue-meetdy;
 
         cursor: pointer;
         margin-top: 1rem;
