--- a/src/features/Chat/containers/NavbarContainer/style.scss
+++ b/src/features/Chat/containers/NavbarContainer/style.scss
@@ -30,7 +30,7 @@ ul {
 
 #sidebar_wrapper {
     height: 100vh;
-    background: $blue-zelo;
+    background: $blue-meetdy;
     display: flex;
     flex-direction: column;
     // width: 64px;
